--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^2.13.4",
     "next": "latest",
+    "next-seo": "^5.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
