--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3030",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3030"
   },
   "dependencies": {
     "daisyui": "^2.13.4",
